# amb

./: .gitignore  README.md  default.conf  docker-compose.prod.yml  docker-compose.yml
amb_back/: Cargo.toml  Dockerfile
amb_back/migrations/2020-11-14-144850_create_users/: up.sql
amb_back/migrations/2020-11-17-085023_create_images/: up.sql
amb_back/migrations/2020-12-03-155806_create_tracks/: up.sql
amb_back/migrations/2020-12-20-044244_create_playlists/: down.sql  up.sql
amb_back/migrations/2020-12-20-044837_create_playlist_tags/: down.sql  up.sql
amb_back/migrations/2020-12-20-045009_create_track_tags/: down.sql  up.sql
amb_back/migrations/2020-12-20-045410_create_track_configurations/: down.sql  up.sql
amb_back/src/: main.rs  schema.rs  service.rs
amb_back/src/data_access/: auth.rs  mod.rs  pw_encryption.rs
amb_back/src/data_access/connection/: pg_connection.rs
amb_back/src/data_access/entities/: mod.rs
amb_back/src/data_access/scripts/: setup.sql
amb_back/src/entities/account/: image.rs  user.rs
amb_back/src/entities/sound/: playlist.rs  playlist_tag.rs  track_configuration.rs
amb_back/src/logic/: auth.rs  mod.rs
amb_back/src/logic/handlers/: basic_handler.rs  file_serving_handler.rs  health_handler.rs  image_handler.rs  mod.rs  track_handler.rs  track_tag_hand.rs  user_handler.rs  utils_handler.rs
amb_back/src/logic/rejections/: error_handling.rs  file_rejection.rs  mod.rs
amb_back/src/presentation/: api.rs  routes.rs
amb_back/src/presentation/api/: basic.rs  file_serving.rs  health.rs  image.rs  track.rs  user.rs
amb_back/src/presentation/routes/: basic_routes.rs  file_serving_routes.rs  image_routes.rs  track_route.rs  track_routes.rs  user.route.rs  user_routes.rs  utils_routes.rs
amb_back/src/service/api/: image.rs  track.rs  track_tag.rs  user.rs
amb_back/src/service/routes/: basic_routes.rs  file_serving_routes.rs  image_routes.rs  track_routes.rs  user_routes.rs
amb_front/: .env  (+4 more)
(+48 files in other folders)
