[package]
name = "amb_back"
version = "0.1.0"
authors = ["Hoodo <doublenegative@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2.5"
postgres = "0.18.1"
dotenv = "0.15.0"