[package]
name = "amb_back"
version = "0.1.0"
authors = ["Hoodo <doublenegative@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2.5"
postgres = "0.18.1"
futures = { version = "0.3", default-features = false, features = ["alloc"]}
diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.6"
serde = "1.0.101"
serde_json = "1.0.41"
serde_derive = "1.0.101"
lazy_static = "1.4"