[package]
name = "amb_back"
version = "0.1.0"
authors = ["Hoodo <doublenegative@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "amb_back"
path = "src/main.rs"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2.5"
postgres = "0.18.1"
chrono = {version = "0.4", features = ["serde"]}
futures = { version = "0.3", default-features = false, features = ["alloc"]}
diesel = { version = "1.4.3", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
r2d2 = "0.8.6"
diesel_migrations = "1.4.0"
rust-argon2 = "0.8"
rand = "0.7.3"
uuid = {version="0.4", features = ["v4"] }
bytes = "0.5.6"
jsonwebtoken = "=7.2"
thiserror = "1.0"

# Serde
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
serde_derive = "1.0.101"

lazy_static = "1.4"